@@ -1,3 +1,8 @@
+2013-04-14 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* support/scripts/mcs51-disasm.pl:
+	  The overlapped block and instruction it is no longer a fatal error.
+
 2013-04-13 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCglobl.h,
